@@ -4,6 +4,7 @@ This file contains the logs between consecutive releases
 
 Release 1.6.0
 =============
+- in db::getAllCoordinatesMao, adding possibility to select within a Box.
 - new method in DbLine: createVerticalFromGrid()
 - Migrate: in Grid to Grid, perform interpolation if flag_inter is True
 - Add version in functions loadDoc and loadData (Python and R)
@@ -25,10 +26,13 @@ Graphics
 --------
 - A new entry in plot3D.py: Slice3DOnDbGrid() which draws three slices around a corner.
 - A new entry in plot3D.py: ScatterOnDb() to draw a set of points in 3D as a scatter
+- A new entry in plot.py: baseMap() to display samples of a Db with a Base Map as background.
 
 gstMarimo
 ---------
 New module (adjacent to gstlearn) to develop interfaces using MARIMO notebooks
+- the code for panel description is in python/modules
+- some applets are located in doc/UI/python
 
 Release 1.5.1
 =============
